clusters/main/kubernetes/system/networkpolicies/app/kube-system-scoped-baseline.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-scoped
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/instance
        operator: In
        values:
          - descheduler
          - generic-device-plugin
          - kubelet-csr-approver
          - metrics-server
          - node-feature-discovery
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-scoped
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/instance
        operator: In
        values:
          - descheduler
          - generic-device-plugin
          - kubelet-csr-approver
          - metrics-server
          - node-feature-discovery
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-namespace-scoped
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/instance
        operator: In
        values:
          - descheduler
          - generic-device-plugin
          - kubelet-csr-approver
          - metrics-server
          - node-feature-discovery
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-kube-prometheus-stack-scoped
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/instance
        operator: In
        values:
          - descheduler
          - generic-device-plugin
          - kubelet-csr-approver
          - metrics-server
          - node-feature-discovery
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-prometheus-stack
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-web-scoped
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/instance
        operator: In
        values:
          - descheduler
          - generic-device-plugin
          - kubelet-csr-approver
          - metrics-server
          - node-feature-discovery
  policyTypes: [Egress]
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
